# mcp-worklog-reg

./: .env.example  README.md  USAGE.md  jira_client.py  pyproject.toml  server.py
.github/workflows/: branch-protection.yml
docs/superpowers/specs/: 2026-06-12-artia-provider-design.md
src/: artia_client.py  config.py  errors.py  github_client.py  jira_client.py  redmine_client.py  server.py  utils.py
src/models/: __init__.py  comment.py  provider_capabilities.py  task.py  worklog.py
src/providers/: __init__.py  artia_provider.py  base.py  github_provider.py  jira_provider.py  redmine_provider.py
src/services/: __init__.py  provider_registry.py
src/tools/: __init__.py  add_comment.py  get_task.py  get_worklogs.py  log_work.py  log_work_batch.py  search_tasks.py  whoami.py
tests/: test_artia_client.py  test_artia_provider.py  test_github_client.py  test_github_provider.py  test_jira_client.py  test_redmine_client.py  test_redmine_provider.py  test_server.py
