[project]
name = "jira-worklog-mcp"
version = "0.1.0"
description = "MCP server para lançar e conferir horas (worklog) no Jira Cloud."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.8.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
